[project]
name = "boidspp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.6.0",
    "numpy>=2.2.5",
    "raylib>=5.5.0.2",
]

[tool.pyrefly]
python_interpreter = ".venv/bin/python3"

[dependency-groups]
dev = [
    "ty>=0.0.1a6",
]
